# algorithms

./: .gitignore  LICENSE  README.md
goose-lib/: CMakeLists.txt
goose-lib/benchmarks/: CMakeLists.txt  bench_sort.cpp
goose-lib/cmake/: GooseConfig.cmake.in
goose-lib/examples/: CMakeLists.txt  example_usage.cpp  sort_demo.cpp
goose-lib/include/goose/algorithm/: factorial.cppm  sort.cppm
goose-lib/tests/: CMakeLists.txt  test_factorial.cpp  test_sort.cpp  test_sort_generic.cpp
